--- a/templates/book/recommended_book.html
+++ b/templates/book/recommended_book.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>베스트셀러</title>
+    <title>추천도서목록</title>
 </head>
 <body>
-    취향에 더 가까운 책 추천받기 -> 
-    <a href="{% url 'users:signup' %}">회원가입</a>
-    <a href="{% url 'users:login' %}">로그인</a>
-    <h1>베스트셀러</h1>
+    <h1>추천도서목록</h1>
     {% for book in all_book %}
         <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
         책제목
         지은이/출판사
         <br/>
     {% endfor %}
-    
 </body>
 </html>
