--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -10,12 +10,13 @@
     <a href="{% url 'users:signup' %}">회원가입</a>
     <a href="{% url 'users:login' %}">로그인</a>
     <h1>베스트셀러</h1>
-    {% for book in all_book %}
+    {% for book in page_obj %}
         <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
         책제목
         지은이/출판사
         <br/>
     {% endfor %}
-    
+    <!-- 페이징 -->
+    {% include 'book/_paging.html' %}
 </body>
 </html>
