--- a/templates/book/show_all_book.html
+++ b/templates/book/show_all_book.html
@@ -8,9 +8,10 @@
 <body>
     <h1>전체 도서목록</h1>
     {% for book in page_obj %}
-        <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
+    <a href="{% url 'book:detail' pk=book.pk %}"><img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
         책제목
         지은이/출판사
+        <a href="{% url 'book:create_review' pk=book.pk %}">리뷰작성</a>
         <br/>
     {% endfor %}
     <!-- 페이징 -->
