base추가, nav bar 초반작업

--- a/templates/book/detail_book.html
+++ b/templates/book/detail_book.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>도서 상세페이지</title>
-</head>
-<body>
+{% extends "_base.html" %}
+{% block body-content %}
     <h1>도서 상세페이지</h1>
     <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
     {{ book.title }}
     {{ book.explanation }}
-</body>
-</html>
+{% endblock %}
