--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>베스트셀러</title>
-</head>
-<body>
+{% extends "_base.html" %}
+{% block body-content %}
     취향에 더 가까운 책 추천받기 -> 
     <a href="{% url 'users:signup' %}">회원가입</a>
     <a href="{% url 'users:login' %}">로그인</a>
@@ -18,5 +12,4 @@
     {% endfor %}
     <!-- 페이징 -->
     {% include 'book/_paging.html' %}
-</body>
-</html>
+{% endblock %}
