--- a/templates/book/create_review.html
+++ b/templates/book/create_review.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>리뷰작성</title>
-</head>
-<body>
+{% extends "_base.html" %}
+{% block body-content %}
     <h1>리뷰 작성</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -13,5 +7,4 @@
         <button type="submit">작성</button>
         <button type="reset">취소</button>
     </form>
-</body>
-</html>
+{% endblock %}
