--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,3 +1,5 @@
+{% extends "_base.html" %}
+{% block body-content %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -15,3 +17,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
