--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,3 +1,5 @@
+{% extends "_base.html" %}
+{% block body-content %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -16,3 +18,4 @@
     
 </body>
 </html>
+{% endblock %}
