add navigation bar

--- a/templates/book/create_review.html
+++ b/templates/book/create_review.html
@@ -1,4 +1,7 @@
-{% extends "_base.html" %}
+{% extends "_base_book.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
     <h1>리뷰 작성</h1>
     <form method="POST" enctype="multipart/form-data">
