--- a/templates/book/detail_book.html
+++ b/templates/book/detail_book.html
@@ -1,4 +1,7 @@
-{% extends "_base.html" %}
+{% extends "_base_book.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
     <h1>도서 상세페이지</h1>
     <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
