--- a/templates/book/recommended_book.html
+++ b/templates/book/recommended_book.html
@@ -1,4 +1,7 @@
-{% extends "_base.html" %}
+{% extends "_base_book.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
     <h1>추천도서목록</h1>
     {% for book in page_obj %}
