--- a/templates/_base_book.html
+++ b/templates/_base_book.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- css 적용 -->
+    <link rel="stylesheet" href = "{% static 'css/style.css' %}">
+
     <title>Bookbyte</title>
+    {% block head-content %}{% endblock %}
 </head>
 <body>
     {% include 'nav_bar.html' %}
