--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -1,8 +1,8 @@
-{% extends "_base.html" %}
+{% extends "_base_book.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
-    취향에 더 가까운 책 추천받기 -> 
-    <a href="{% url 'users:signup' %}">회원가입</a>
-    <a href="{% url 'users:login' %}">로그인</a>
     <h1>베스트셀러</h1>
     {% for book in page_obj %}
         <a href="{% url 'book:detail' pk=book.pk %}"><img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
