--- a/templates/book/show_review.html
+++ b/templates/book/show_review.html
@@ -1,4 +1,7 @@
-{% extends "_base.html" %}
+{% extends "_base_book.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
     <h1>리뷰조회</h1>
     {% for review in reviews %}
