--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,14 +1,28 @@
 {% load static %}
-<header id="header">
-    <div class="head-inner">
-        <h1 class="logo">
-            <a href="{% url 'book:best_seller' %}"><img src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte" width="15%"/></a>
-        </h1>
-    </div>
-    <nav class="nav">
-        <ul>
-            <li><a href="{% url 'users:signup' %}">회원가입</a></li>
-            <a href="{% url 'users:login' %}">로그인</a>
-        </ul>
-    </nav>    
+<header class="header">
+        <!-- 로고 -->
+        <div class="headertop">
+            <div class="logo_icon">
+                <a href="{% url 'book:best_seller' %}"><img id="logo_img" src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte"/></a>
+            </div>
+            <!-- 회원가입/로그인 -->
+            <nav>
+                <ul>
+                    <!-- <li>취향에 더 가까운 책 추천받기 -></li> -->
+                    <li><a href="{% url 'users:signup' %}">회원가입</a></li>
+                    <li><a href="{% url 'users:login' %}">로그인</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!-- 메뉴바 -->
+        <div class="headerbottom">
+            <ul>
+                <li><a href="{% url 'book:best_seller' %}"><b>베스트셀러</b></a></li>
+                <li><a href="{% url 'book:recommended_book' %}"><b>AI추천도서</b></a></li>
+                <li><a href="{% url 'book:show_all_book' %}"><b>전체도서목록</b></a></li>
+                <li><a href="{% url 'book:show_review' %}"><b>마이리뷰조회</b></a></li>
+            </ul>
+        </div>
+        <hr/>
 </header>
