--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,4 +1,7 @@
-{% extends "_base.html" %}
+{% extends "_base_user.html" %}
+{% block head-content %}
+
+{% endblock %}
 {% block body-content %}
 <!DOCTYPE html>
 <html lang="ko">
