--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -3,7 +3,7 @@
         <!-- 로고 -->
         <div class="headertop">
             <div class="logo_icon">
-                <a href="{% url 'book:best_seller' %}"><img id="logo_img" src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte"/></a>
+                <a href="{% url 'book:best_seller' %}"><img class="logo_img" src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte"/></a>
             </div>
             <!-- 회원가입/로그인 -->
             <nav>
