--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,24 +1,23 @@
 {% extends "_base_user.html" %}
+{% load static %}
+
 {% block head-content %}
 
 {% endblock %}
 {% block body-content %}
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
-</head>
-<body>
-    <h1>회원가입</h1>
+<div class="user_toparea">
+    <div class="section-logo">
+        <a href="{% url 'book:best_seller' %}"><img class="logo_img_user" src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte"/></a>
+    </div>
+    <div class="section-title"><b>회원정보를 입력해 주세요</b></div>
+</div>
+<div class="user_formarea">
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">회원가입</button>
         <button type="reset">취소</button>
     </form>
-    
-</body>
-</html>
+</div>
+
 {% endblock %}
