--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -13,7 +13,7 @@
         <br/>
         <div class="btn_logins">
             <button class="btn_login" type="submit">로그인</button>
-            <button class="btn_cancel" type="reset">취소</button>
+            <button class="btn_cancel" type="button" onclick="location.href='{% url 'book:best_seller' %}'">취소</button>
         </div>
     </form>
 </div>
