--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -16,7 +16,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">회원가입</button>
-        <button type="reset">취소</button>
+        <button class="btn_cancel" type="button" onclick="location.href='{% url 'book:best_seller' %}'">취소</button>
     </form>
 </div>
 
