--- a/templates/_base_book.html
+++ b/templates/_base_book.html
@@ -7,6 +7,7 @@
 
     <!-- css 적용 -->
     <link rel="stylesheet" href = "{% static 'css/style.css' %}">
+    <link rel="stylesheet" href = "{% static 'css/bootstrap.min.css' %}">
 
     <title>Bookbyte</title>
     {% block head-content %}{% endblock %}
