--- a/templates/_base_book.html
+++ b/templates/_base_book.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href = "{% static 'css/style.css' %}">
     <link rel="stylesheet" href = "{% static 'css/bootstrap.min.css' %}">
 
+    <!-- icon 적용-->
+    <script src="https://kit.fontawesome.com/4c4232cd4f.js" crossorigin="anonymous"></script>
+
     <title>Bookbyte</title>
     {% block head-content %}{% endblock %}
 </head>
