--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -3,13 +3,17 @@
 
 {% endblock %}
 {% block body-content %}
-    <h1>베스트셀러</h1>
-    {% for book in page_obj %}
-        <a href="{% url 'book:detail' pk=book.pk %}"><img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
-        책제목
-        지은이/출판사
-        <br/>
-    {% endfor %}
-    <!-- 페이징 -->
-    {% include 'book/_paging.html' %}
+    <div class="content-header">
+        <div class="content-header-text">베스트셀러</div>
+    </div>
+    <div class="content-content">
+        {% for book in page_obj %}
+            <a href="{% url 'book:detail' pk=book.pk %}"><img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
+            책제목
+            지은이/출판사
+            <br/>
+        {% endfor %}
+        <!-- 페이징 -->
+        {% include 'book/_paging.html' %}
+    </div>
 {% endblock %}
