--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,12 +1,23 @@
 {% load static %}
 <header class="header">
         <!-- 로고 -->
-        <div class="headertop">
-            <div class="logo_icon">
-                <a href="{% url 'book:best_seller' %}"><img class="logo_img" src ="{% static 'logo/logo_bookbyte.png' %}" alt="bookbyte"/></a>
+            <div class="headertop">
+                <div class="logo_icon">
+                    <a href="{% url 'book:best_seller' %}"><img class="logo_img" src ="{% static 'logo/logo_horizontal-removebg.png' %}" alt="bookbyte"/></a>
+                </div>
+            </div>
+                
+            <!-- 메뉴바 -->
+            <div class="headermiddle">
+                <ul>
+                    <li><a href="{% url 'book:best_seller' %}"><b>베스트셀러</b><i class="fa-regular fa-lightbulb"></i></a></li>
+                    <li><a href="{% url 'book:recommended_book' %}"><b>AI추천도서</b><i class="fa-regular fa-lightbulb"></i></a></li>
+                    <li><a href="{% url 'book:show_all_book' %}"><b>전체도서목록</b><i class="fa-regular fa-lightbulb"></i></a></li>
+                    <li><a href="{% url 'book:show_review' %}"><b>마이리뷰조회</b><i class="fa-regular fa-lightbulb"></i></a></li>
+                </ul>
             </div>
             <!-- 회원가입/로그인 -->
-            <nav>
+            <div class="headerbottom">
                 <ul>
                     <!-- <li>취향에 더 가까운 책 추천받기 -></li> -->
                     {% if not user.is_authenticated %}
@@ -17,17 +28,7 @@
                         <li><a href="{% url 'users:logout' %}">로그아웃</a></li>
                     {% endif %}
                 </ul>
-            </nav>
-        </div>
-
-        <!-- 메뉴바 -->
-        <div class="headerbottom">
-            <ul>
-                <li><a href="{% url 'book:best_seller' %}"><b>베스트셀러</b></a></li>
-                <li><a href="{% url 'book:recommended_book' %}"><b>AI추천도서</b></a></li>
-                <li><a href="{% url 'book:show_all_book' %}"><b>전체도서목록</b></a></li>
-                <li><a href="{% url 'book:show_review' %}"><b>마이리뷰조회</b></a></li>
-            </ul>
-        </div>
+            </div>
+        
         <hr/>
 </header>
