마우스오버설정

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,17 @@
 	color: #00468B;
 }
 
+/* 마우스오버 설정 */
+.headermiddle li:hover {
+	background-color: #00468B;
+  	border-radius: 3px;
+}
+
+/* 마우스오버 설정 */
+.headermiddle a:hover {
+	color: white;
+}
+
 .headerbottom{ 
 	display: inline-block; /* 같은 라인에 배치 */
 	float: right;
