--- a/templates/book/detail_book.html
+++ b/templates/book/detail_book.html
@@ -4,7 +4,12 @@
 {% endblock %}
 {% block body-content %}
     <h1>도서 상세페이지</h1>
-    <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
+    {% if book.cover_image %}
+        <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
+    {% else %}
+        <img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지">
+    {% endif %}
+
     {{ book.title }}
     {{ book.explanation }}
 {% endblock %}
