change image field

--- a/templates/book/detail_book.html
+++ b/templates/book/detail_book.html
@@ -5,7 +5,7 @@
 {% block body-content %}
     <h1>도서 상세페이지</h1>
     {% if book.cover_image %}
-        <img src ="{{ book.cover_image.url }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
+        <img src ="{{ book.cover_image }}" alt="표지정보가 없습니다" width="195px" height="345px"/>
     {% else %}
         <img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지">
     {% endif %}
