--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -13,8 +13,10 @@
             {% else %}
                 <img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지">
             {% endif %}
-            책제목
-            지은이/출판사
+            책제목: 
+            {{ book.title }}
+            지은이/출판사: 
+            {{ book.author }}
             <br/>
         {% endfor %}
         <!-- 페이징 -->
