--- a/templates/book/show_all_book.html
+++ b/templates/book/show_all_book.html
@@ -13,8 +13,10 @@
             {% else %}
                 <img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지">
             {% endif %}
-            책제목
-            지은이/출판사
+            책제목: 
+            {{ book.title }}
+            지은이/출판사: 
+            {{ book.author }}
             <a href="{% url 'book:create_review' isbn=book.isbn %}">리뷰작성</a>
             <br/>
         {% endfor %}
