--- a/templates/book/recommended_book.html
+++ b/templates/book/recommended_book.html
@@ -9,7 +9,7 @@
     <div class="content-content">
         {% for book in page_obj %}
             {% if book.cover_image %}
-                <a href="{% url 'book:detail' isbn=book.isbn %}"><img src ="{{ book.cover_image }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
+                <a href="{% url 'book:detail' pk=book.id %}"><img src ="{{ book.cover_image }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
             {% else %}
                 <img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지">
             {% endif %}
@@ -17,7 +17,7 @@
             {{ book.title }}
             지은이/출판사: 
             {{ book.author }}
-            <a href="{% url 'book:create_review' isbn=book.isbn %}">리뷰작성</a>
+            <a href="{% url 'book:create_review' pk=book.id %}">리뷰작성</a>
             <br/>
         {% endfor %}
         <!-- 페이징 -->
