--- a/templates/book/best_seller.html
+++ b/templates/book/best_seller.html
@@ -6,18 +6,24 @@
     <div class="content-header">
         <div class="content-header-text">베스트셀러</div>
     </div>
-    <div class="content-content">
+    <div class="content-parent">
+    <hr/>
         {% for book in page_obj %}
-            {% if book.cover_image %}
-                <a href="{% url 'book:detail' pk=book.id %}"><img src ="{{ book.cover_image }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
-            {% else %}
-                <a href="{% url 'book:detail' pk=book.id %}"><img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지"></a>
-            {% endif %}
-            책제목: 
-            {{ book.title }}
-            지은이/출판사: 
-            {{ book.author }}
-            <br/>
+            <div class="content-child1">
+                {% if book.cover_image %}
+                    <a href="{% url 'book:detail' pk=book.id %}"><img src ="{{ book.cover_image }}" alt="표지정보가 없습니다" width="195px" height="345px"/></a>
+                {% else %}
+                    <a href="{% url 'book:detail' pk=book.id %}"><img src="https://picsum.photos/seed/picsum/195/345" alt="기본 이미지"></a>
+                {% endif %}
+            </div>
+            <div class="content-child2">
+                <b>{{ book.title }}</b>
+                <br/>
+                {{ book.author }}
+                ·
+                {{ book.publisher }}
+            </div>
+        <hr/>
         {% endfor %}
         <!-- 페이징 -->
         {% include 'book/_paging.html' %}
